# Ember

./: Dockerfile  README.md  docker-compose.yml  vcpkg.json
configs/: character.conf.dist  fusion.conf.dist  gateway.conf.dist  login.conf.dist  mdns.conf.dist  mysql_config.conf.dist  world.conf.dist
docs/: Libraries.md
schemas/: CMakeLists.txt
schemas/spark/: Spark.fbs
scripts/: run-all.bat  run-all.sh
sql/mysql/login/: schema.sql
src/: CMakeLists.txt
src/account/: AccountHandler.h  AccountService.cpp  AccountService.h  CMakeLists.txt  Runner.cpp  Runner.h  Sessions.cpp  main.cpp
src/character/: CMakeLists.txt  CharacterHandler.cpp  CharacterHandler.h  CharacterService.cpp  CharacterService.h  Runner.cpp  Runner.h  main.cpp
src/fusion/: CMakeLists.txt  main.cpp
src/game/: CMakeLists.txt  Weather.h
src/gateway/: AccountClient.cpp  AccountClient.h  CMakeLists.txt  CharacterClient.cpp  CharacterClient.h  ClientConnection.cpp  ClientConnection.h  ClientConnection.inl  ClientHandler.cpp  ClientHandler.h  ClientLogHelper.h  CompressMessage.cpp  CompressMessage.h  Config.h  ConnectionDefines.h  ConnectionStats.h  Event.h  EventDispatcher.cpp  EventDispatcher.h  EventTypes.h  Events.h  FilterTypes.h  Locator.cpp  Locator.h  NetworkListener.cpp  NetworkListener.h  PacketCrypto.h  QoS.cpp  QoS.h  RealmQueue.cpp  RealmQueue.h  RealmService.cpp  RealmService.h  Routing.h  Runner.cpp  Runner.h  ServerConfig.h  SessionManager.cpp  SessionManager.h  SocketType.h  (+7 more)
src/gateway/packetlog/: FBSink.cpp  FBSink.h  LogSink.cpp  LogSink.h  PacketLogger.cpp  PacketLogger.h  PacketSink.h
src/gateway/states/: Authentication.cpp  Authentication.h  AuthenticationContext.h  CharacterList.cpp  CharacterList.h  ClientContext.h  ClientStates.h  SessionClose.cpp  SessionClose.h  StateJumpTables.h  WorldEnter.cpp  WorldEnter.h  WorldEnterContext.h  WorldForwarder.cpp  WorldForwarder.h  WorldTransfer.h
src/libs/conpool/: CMakeLists.txt
src/libs/conpool/include/conpool/: Connection.h  Exception.h
src/libs/conpool/src/MySQL/: Driver.cpp
src/libs/dbcreader/: CMakeLists.txt
src/libs/dbcreader/include/dbcreader/: DiskLoader.h  Header.h  Store.h
src/libs/logger/include/logger/: ConsoleSink.h  Exception.h  FileSink.h  FileWrapper.h  HelperMacros.h  Utility.h
src/libs/logger/src/: ConsoleSink.cpp  FileSink.cpp
src/libs/mpq/include/mpq/: Crypt.h  Exception.h  SharedDefs.h  Structures.h
src/libs/mpq/src/: MPQ.cpp  PKCompression.cpp
src/libs/mpq/src/base/: MemoryArchive.cpp
src/libs/mpq/src/v0/: MemoryArchive.cpp
src/libs/nsd/: CMakeLists.txt
src/libs/nsd/src/: NSD.cpp
src/libs/shared/: CMakeLists.txt
src/libs/shared/shared/: Banner.cpp  ClientRef.h  ClientUUID.h  Realm.h  smartenum.cpp  smartenum.hpp
src/libs/shared/shared/database/: Exception.h
src/libs/shared/shared/database/daos/mysql/: UserDAO.h
src/libs/shared/shared/database/objects/: Character.h  User.h
src/libs/shared/shared/threading/: Utility.cpp  Utility.h
src/libs/shared/shared/util/: FNVHash.h  FileMD5.cpp  STUN.h  Utility.cpp  cstring_view.hpp
src/libs/shared/shared/utility/: ConsoleColour.cpp  Exception.h  FileMD5.cpp  LogConfig.cpp  PortForward.h  STUN.h  xoroshiro128plus.cpp
src/libs/spark/: CMakeLists.txt
src/libs/spark/include/spark/: Channel.h  Common.h  Connection.h  Exception.h  Handler.h  HandlerRegistry.h  Link.h  MessageHeader.h  Peers.h  RemotePeer.h  Result.h  Server.h  Tracking.h  Utility.h
src/libs/spark/include/spark/buffers/: BinaryStream.h  BufferAdaptor.h  BufferSequence.h  DynamicBuffer.h  IntrusiveStorage.h  StaticBuffer.h
src/libs/spark/include/spark/buffers/allocators/: TLSBlockAllocator.h
src/libs/spark/include/spark/buffers/detail/: IntrusiveStorage.h
src/libs/spark/include/spark/buffers/pmr/: BinaryStreamWriter.h  BufferReadAdaptor.h  BufferWrite.h  BufferWriteAdaptor.h  NullBuffer.h  StreamBase.h
src/libs/spark/src/: Channel.cpp  Connection.cpp  HandlerRegistry.cpp  Peers.cpp  RemotePeer.cpp  Server.cpp  Tracking.cpp
src/libs/stun/src/: Client.cpp  MessageBuilder.cpp  Parser.cpp
src/login/: AccountClient.cpp  AccountClient.h  Actions.h  Authenticator.cpp  Authenticator.h  CMakeLists.txt  GameVersion.h  IntegrityData.cpp  IntegrityData.h  IntegrityPlatforms.h  LoginHandler.cpp  LoginHandler.h  LoginHandlerBuilder.h  LoginSession.cpp  LoginSession.h  LoginState.h  MonitorCallbacks.cpp  MonitorCallbacks.h  NetworkListener.h  NetworkSession.h  PINAuthenticator.cpp  PINAuthenticator.h  PatchGraph.cpp  Patcher.cpp  Patcher.h  RealmClient.cpp  RealmClient.h  RealmList.cpp  Runner.cpp  Runner.h  SessionBuilders.h  Survey.cpp  Survey.h  main.cpp
src/login/grunt/: Handler.cpp  Handler.h  Magic.h
src/login/grunt/client/: LoginChallenge.h
src/mdns/: CMakeLists.txt  DNSDefines.h  MulticastSocket.cpp  NSDService.cpp  NSDService.h  Runner.cpp  Runner.h  Server.cpp  Server.h  ServiceRegistry.h  main.cpp
src/social/: MonitorCallbacks.cpp  MonitorCallbacks.h  main.cpp
src/tools/dbcparser/: DBCHeader.h  Generator.cpp  SQLDMLGenerator.cpp  TreeNode.h  TypeUtils.h  Validator.cpp  Validator.h  main.cpp
src/tools/dbcparser/templates/: DiskLoader.cpp_  Storage.h_
src/tools/dbutils/: main.cpp
src/tools/packetconvert/: ConsoleSink.cpp  main.cpp
src/tools/portopen/: main.cpp
src/tools/rpcgen/: SchemaParser.cpp  Utility.cpp  main.cpp
src/tools/rpcgen/templates/: Client.h_  Service.h_
src/tools/sparktest/: HelloClient.cpp  HelloClient.h  HelloService.cpp  HelloService.h  main.cpp
src/tools/srpgen/: README.md
src/tools/stun/: main.cpp
src/world/: CMakeLists.txt  Launch.cpp  MapRunner.cpp  MapRunner.h  Runner.cpp  Runner.h  Watchdog.cpp  Watchdog.h  main.cpp
src/world/utilities/: DeltaTimer.h  Utility.cpp  Utility.h
tests/: BinaryStream.cpp  BinaryStreamPMR.cpp  BufferAdaptor.cpp  BufferUtility.cpp  CMakeLists.txt  DNS.cpp  DynamicBuffer.cpp  FNV1.cpp  GameIntegrity.cpp  IPBan.cpp  IntegrityData.cpp  IntrusiveStorage.cpp  MPQ.cpp  PINAuthenticator.cpp  Patcher.cpp  SRP6.cpp  STUN.cpp  TLSBlockAllocator.cpp  ThreadUtility.cpp  UTF8Utilities.cpp
(+12 files in other folders)
